--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ li a {
   margin: 0 20px;
   background-color: #005ae2;
   border-radius: 20px;
-  padding: 8px 30px;
+  padding: 11px 45px;
   color: #ffffff;
   border: none;
 }
@@ -88,7 +88,7 @@ li a {
 }
 .Vector-img {
   margin-top: -40px;
-  margin-left: 90px;
+  margin-left: 25px;
 }
 /* END OF ADVANCE SECTION ***** */
 
@@ -445,6 +445,13 @@ li a {
 }
 /* END OF FAQ SECTION */
 
+/* DROP-DOWN SECTION */
+.drop-down{
+  margin-left: 80px;
+  color: #005ae2;
+}
+/* END OF DROP-DOWN SECTION  */
+
 /* START OF THE NEXT BOX */
 .why-choose-image {
   display: flex;
@@ -518,3 +525,31 @@ li a {
 }
 
 /* END OF THE NEXT BOX */
+
+/* START OF FOOTER */
+.footer-background{
+  width: 100%;
+  height: 590px;
+  background-color: #ffffff;
+}
+
+.footer-image-one{
+  margin-top: 45px;
+}
+
+.footer-image-two{
+  margin-left: 464px;
+}
+
+.logo{
+  margin-bottom: 40px;
+}
+
+.icon{
+  display: flex;
+  margin-left: 4px;
+}
+
+.gap{
+  margin-left: 25px;
+}
